# sherma

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: sherma
.devcontainer/: devcontainer.json
.github/workflows/: pr.yml  release.yml
deploy/: requirements.txt  streamlit_app.py
docs/: README.md  a2a-integration.md  api-reference.md  concepts.md  declarative-agents.md  getting-started.md  hooks.md  multi-agent.md  skills.md
examples/: declarative_hooks_agent.py  declarative_hooks_agent.yaml  declarative_skill_agent.py  declarative_skill_agent.yaml  declarative_weather_agent.py  declarative_weather_agent.yaml  hooks.py  tools.py  weather_agent.py
examples/a2a_server/: client.py  server.py
examples/approval_agent/: agent.yaml  main.py  main_structured_resume.py
examples/conversation_summarization/: agent.yaml  main.py
examples/declarative_hooks_agent/: agent.yaml  main.py
examples/declarative_skill_agent/: agent.yaml  main.py
examples/declarative_weather_agent/: agent.yaml  main.py
examples/error_recovery_agent/: agent.yaml  main.py
examples/load_skills_llm_driven/: agent.yaml  main.py
examples/load_skills_manual/: agent.yaml  main.py
examples/multi_agent/: main.py  supervisor_agent.yaml  weather_agent.yaml
examples/remote_hook_server/: server.py
examples/weather_agent/: main.py
scripts/: sync-requirements.sh
sherma/: __init__.py  exceptions.py  http.py  logging.py  schema.py  types.py  version.py
sherma/a2a/: __init__.py  executor.py
sherma/entities/: __init__.py  base.py  llm.py  prompt.py  skill.py  skill_card.py  tool.py
sherma/hooks/: __init__.py  executor.py  handler.py  manager.py  remote.py  serialization.py  types.py
sherma/langgraph/: __init__.py  agent.py  skill_tools.py  tools.py  tracing.py
sherma/messages/: __init__.py  a2a.py  converter.py  langgraph.py
sherma/registry/: __init__.py  agent.py  base.py  bundle.py  llm.py  prompt.py  skill.py  skill_card.py  tenant.py  tool.py
sherma/skills/: local_tools.py  mcp.py  resolver.py
sherma/streamlit/: app.py  async_runner.py  state.py  storage.py
skills/sherma/: SKILL.md  skill-card.json
tasks/: 0-setup-python-repo.md  11-error-handling-and-hook.md  12-hooks-over-json-rpc.md  12-ui-for-declarative-agent.md  13-prompts-can-be-array.md  14-integration-tests.md  16-create-streamlit.md  17-sherma-skill.md  2-example-agent.md  28-state-prefix-in-cel.md  3-fixes.md  30-skill-card-extensions.md  32-cel-expressive-power-for-structured-data.md  33-fix-args-passed-to-interrupt.md  36-retry-and-error-recovery.md  39-message-metadata-access-in-cel.md  4-agent-input-output-schema.md  41-custom-state-field-reducers.md  42-programmatic-skill-loading.md  45-prompt-string-templating-with-state-variables.md  46-custom-node-type-via-hooks.md  5-declarative-agents.md  56-static-skill-discovery.md  58-call-llm-always-appends-to-messages.md  6-skills.md  61-file-based-prompt-loading-in-yaml.md  62-conditional-entry-point-routing.md  63-preserve-message-objects-on-interrupt-resume.md  64-expose-registries-in-nodeexecutecontext.md  66-additional-checkpointer-types.md  7-hooks.md  74-mcp-and-env-var-interpolation.md  75-yaml-json-schema-validated-output.md  8-tenants.md  9-wrap-agent-as-tool.md  skill-agent-loop.excalidraw
tasks/plans/: 0-setup-python-repo.md  1-agent-framework.md  10-standardize-path-resolution.md  12-hooks-over-json-rpc.md  12-ui-for-declarative-agent.md  14-integration-tests.md  15-use-sub-agents-as-tools-granular.md  17-sherma-skill.md  3-fixes.md  (+28 more)
tests/: test_hello.py  test_hooks_error.py  test_http.py  test_schema.py  test_types.py  test_version.py
ui/: index.html  package-lock.json  package.json
(+127 files in other folders)
